@@ -59,6 +59,8 @@ WinMerge development.
 
 <p><b>Important files:</b>
 <ul>
+  <li><a href="Compiling.html">WinMerge compiling</a> contains instructions
+    for setting up development environment and compiling WinMerge.</li>
   <li><a href="readme-developers.html">ReadMe for developers</a> is old "main"
     document. Contains still lots and lots of useful information.</li>
   <li><a href="readme-Subversion.html">Subversion info</a> tells how to use
